--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,6 @@
+@import "libs";
 @import "helpers/variables";
 @import "helpers/mixins";
-@import "helpers/functions";
-@import "vendor/libs";
-@import "base/fonts";
-@import "base/general";
-@import "../blocks/modules";
+@import "general/fonts";
+@import "general/base";
+@import "../blocks/blocks";
