--- a/src/pages/reg/reg.css
+++ b/src/pages/reg/reg.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.reg-wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.reg {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin-top: 70px;
+  max-width: 1535px;
+  width: 935px;
+  max-height: 1040px;
+  height: 740px;
+  border: 1px solid #C4C4C4;
+  border-radius: 30px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reg-form {
+  width: 735px;
+  height: 540px;
+}
+.reg-form_title {
+  font-size: 40px;
+}
+.reg-form_subtitle {
+  font-size: 25px;
+  font-weight: 400;
+}
+.name {
+  width: 559px;
+  height: 45px;
+  padding-left: 15px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-size: 20px;
+  outline: none;
+  box-shadow: 0px 3px 8px -1px rgba(0,0,0,0.45);
+  margin-bottom: 15px;
+}
+.surname {
+  width: 559px;
+  height: 45px;
+  padding-left: 15px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-size: 20px;
+  outline: none;
+  box-shadow: 0px 3px 8px -1px rgba(0,0,0,0.45);
+  margin-bottom: 15px;
+}
+.password {
+  margin-bottom: 15px;
+}
+.acc-pass {
+  width: 559px;
+  height: 45px;
+  padding-left: 15px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-size: 20px;
+  outline: none;
+  box-shadow: 0px 3px 8px -1px rgba(0,0,0,0.45);
+  margin-bottom: 15px;
+}
+.button-reg {
+  width: 210px;
+  height: 45px;
+  border: none;
+  border-radius: 10px;
+  background-color: #2C929F;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+  outline: none;
+  transition: .5s;
+  margin-left: 365px;
+}
+.button-reg:hover {
+  background-color: inherit;
+  color: #2C929F;
+  border: 1px solid #2C929F;
 }
