--- a/src/pages/reg/reg.css
+++ b/src/pages/reg/reg.css
@@ -64,7 +64,7 @@
   margin-bottom: 15px;
 }
 .button-reg {
-  width: 210px;
+  width: 240px;
   height: 45px;
   border: none;
   border-radius: 10px;
@@ -74,7 +74,8 @@
   font-weight: 400;
   outline: none;
   transition: .5s;
-  margin-left: 365px;
+  margin-left: 337px;
+  font-family: Montserrat;
 }
 .button-reg:hover {
   background-color: inherit;
