solve problem aboute react route and add ways form

--- a/src/pages/sign/sign.css
+++ b/src/pages/sign/sign.css
@@ -39,7 +39,7 @@
     text-decoration: none;
     color: #2C929F;
   }
-  .button {
+  .sign-button {
     position: relative;
     left: 145px;
   }
