add package react-transition-group

--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,17 @@ ul {
 .react-tabs__tab--selected {
   color: #2C929F;
 }
+.option-enter {
+  opacity: 0;
+}
+.option-enter.option-enter-active {
+  opacity: 1;
+  transition: opacity 2s ease;
+}
+.option-exit {
+  opacity: 1;
+}
+.option-exit.option-exit-active {
+  opacity: 0;
+  transition: opacity 2s ease;
+}
