--- a/src/pages/ways/ways.css
+++ b/src/pages/ways/ways.css
@@ -26,3 +26,48 @@
     font-size: 18px;
     margin-right: 10px;
 }
+.ways-radio_button {
+    vertical-align: top;
+    width: 18px;
+    height: 18px;
+    margin: 0 3px 0 0;
+}
+.ways-radio_button + label {
+    cursor: pointer;
+    margin-bottom: 12px;
+    display: block;
+}
+.ways-radio_button:not(checked) {
+    position: absolute;
+    opacity: 0;
+}
+.ways-radio_button:not(checked) + label {
+    position: relative;
+    padding: 0 0 0 35px;
+}
+.ways-radio_button:not(checked) + label:before {
+    content: '';
+    position: absolute;
+    top: -3px;
+    left: 0;
+    width: 22px;
+    height: 22px;
+    border: 1px solid #8c9daf;
+    border-radius: 50%;
+    background: #FFF;
+}
+.ways-radio_button:not(checked) + label:after {
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 4px;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: #2C929F;
+    opacity: 0;
+    transition: all .2s;
+}
+.ways-radio_button:checked + label:after {
+    opacity: 1;
+}
