--- a/src/components/header-bar/header-bar.css
+++ b/src/components/header-bar/header-bar.css
@@ -13,6 +13,9 @@
     font-size: 30px;
     margin: 5px 5px 5px 15px;
 }
+.header-bar_logo:hover {
+    transform: scale(.93, .93);
+}
 a {
     margin-left: 30px;
     color: #fff;
