--- a/src/components/input-login/input-login.css
+++ b/src/components/input-login/input-login.css
@@ -8,4 +8,4 @@
     outline: none;
     box-shadow: 0px 3px 8px -1px rgba(0,0,0,0.45);
 }
-::-webkit-input-placeholder { color:#c4c4c4; font-family: Montserrat; font-size: 18px;}
+::-webkit-input-placeholder { color:#c4c4c4; font-family: Montserrat;}
