--- a/src/components/header-bar/header-bar.css
+++ b/src/components/header-bar/header-bar.css
@@ -3,6 +3,7 @@
     position: fixed;
     display: flex;
     align-items: center;
+    justify-content: center;
     width: 100%;
     height: 50px;
     color: #fff;
@@ -29,7 +30,7 @@ a {
 a:hover {
     color: #000;
 }
-.header-bar_button {
+/* .header-bar_button {
     position: absolute;
     margin-right: 10px;
     right: 0;
@@ -39,7 +40,73 @@ a:hover {
     font-size: 20px;
     outline: none;
     transition: .5s;
-}
+} */
 .header-bar_button:hover {
     color: #000;
+}
+/*  */
+.menu {
+    top: 0;
+}
+.bm-burger-button {
+    position: fixed;
+    width: 26px;
+    height: 20px;
+    left: 15px;
+    top: 15px;
+  }
+  .bm-burger-bars {
+    background: #fff;
+  }
+  .bm-burger-bars-hover {
+    background: #000;
+  }
+  .bm-cross-button {
+    height: 24px;
+    width: 24px;
+  }
+  .bm-cross {
+    background: #bdc3c7;
+  }
+  .bm-menu-wrap {
+    position: fixed;
+    height: 100%;
+  }
+  .bm-menu {
+    position: relative;
+    left: 0;
+    background: #373a47;
+    padding: 2.5em 1.5em 0;
+    font-size: 1.15em;
+  }
+  .bm-morph-shape {
+    fill: #373a47;
+  }
+  .bm-item-list {
+      overflow: hidden;
+    color: #b8b7ad;
+    padding: 0.8em;
+  }
+  .bm-item {
+    display: inline-block;
+  }
+  .bm-overlay {
+      top: 0;
+    background: rgba(0, 0, 0, 0.3);
+  }
+@media screen and (max-width: 375px) {
+    .bm-burger-button {
+        width: 26px;
+        height: 20px;
+    }
+    .header-bar_logo {
+        font-size: 16px;
+    }
+    a {
+        margin-left: 5px;
+        font-size: 14px;
+    }
+    .header-bar_button {
+        font-size: 16px;
+    }
 }
