--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@
   font-size: 26px;
 }
 .slide-route {
+  font-size: 20px;
   margin-left: 0;
   transition: .3s;
 }
@@ -149,6 +150,7 @@ ul {
     font-size: 80px;
   }
   .slide-text {
+    top: -70px;
     left: 150px;
     bottom: 50px;
   }
@@ -157,7 +159,9 @@ ul {
     font-size: 20px;
   }
   .slide-subtitle {
+    width: 220px;
     font-size: 16px;
+    word-wrap: break-word;
   }
   .slide-route {
     font-size: 14px;
