--- a/src/components/input-password/input-password.css
+++ b/src/components/input-password/input-password.css
@@ -9,3 +9,9 @@
     box-shadow: 0px 3px 8px -1px rgba(0,0,0,0.45);
 }
 ::-webkit-input-placeholder { color:#c4c4c4; font-family: Montserrat; font-size: 18px;}
+@media screen and (max-width: 375px) {
+    .password {
+        width: 300px;
+        height: 35px;
+    }
+}
