--- a/src/pages/sign/sign.css
+++ b/src/pages/sign/sign.css
@@ -35,11 +35,30 @@
   }
   .sign-form_add {
     position: relative;
-    right: 170px;
+    right: 150px;
     text-decoration: none;
     color: #2C929F;
   }
   .sign-button {
     position: relative;
-    left: 145px;
+    left: 125px;
+  }
+  @media screen and (max-width: 375px) {
+    .sign {
+      width: 350px;
+      height: 100vh;
+    }
+    .sign-form_title {
+      font-size: 30px;
+    }
+    .sign-form_subtitle {
+      font-size: 16px;
+    }
+    .sign-form_add {
+      font-size: 14px;
+      right: 65px;
+    }
+    .sign-button {
+      left: 65px;
+    }
   }
