--- a/src/components/input-login.css
+++ b/src/components/input-login.css
@@ -8,6 +8,9 @@
     outline: none;
     box-shadow: 0px 3px 8px -1px rgba(0,0,0,0.45);
 }
+.login:focus {
+    border: 1px solid #2C929F;
+}
 ::-webkit-input-placeholder { color:#c4c4c4; font-family: Montserrat;}
 @media screen and (max-width: 375px) {
     .login {
