--- a/src/pages/reg/reg.css
+++ b/src/pages/reg/reg.css
@@ -44,6 +44,10 @@
   margin-bottom: 15px;
 }
 
+.name:focus {
+  border: 1px solid #2C929F;
+}
+
 .surname {
   width: 559px;
   height: 45px;
@@ -54,6 +58,10 @@
   outline: none;
   box-shadow: 0px 3px 8px -1px rgba(0, 0, 0, 0.45);
   margin-bottom: 15px;
+}
+
+.surname:focus {
+  border: 1px solid #2C929F;
 }
 
 .password {
@@ -70,6 +78,10 @@
   outline: none;
   box-shadow: 0px 3px 8px -1px rgba(0, 0, 0, 0.45);
   margin-bottom: 15px;
+}
+
+.acc-pass:focus {
+  border: 1px solid #2C929F;
 }
 
 .button-reg {
