--- a/src/pages/ways/ways.css
+++ b/src/pages/ways/ways.css
@@ -1,9 +1,11 @@
 .ways-wrapper {
     padding-top: 50px;
 }
+
 .ways {
     margin: 15px;
 }
+
 .ways-input {
     width: 459px;
     height: 45px;
@@ -12,40 +14,52 @@
     border-radius: 10px;
     font-size: 20px;
     outline: none;
-    box-shadow: 0px 3px 8px -1px rgba(0,0,0,0.45);
+    box-shadow: 0px 3px 8px -1px rgba(0, 0, 0, 0.45);
 }
+
+.ways-input:focus {
+    border: 1px solid #2C929F;
+}
+
 .ways-button {
     margin-left: 10px;
 }
+
 .ways-radio_block {
     display: flex;
 }
+
 .ways-radio_block-item {
     margin-top: 15px;
     font-weight: 700;
     font-size: 18px;
     margin-right: 10px;
 }
+
 .ways-radio_button {
     vertical-align: top;
     width: 18px;
     height: 18px;
     margin: 0 3px 0 0;
 }
-.ways-radio_button + label {
+
+.ways-radio_button+label {
     cursor: pointer;
     margin-bottom: 12px;
     display: block;
 }
+
 .ways-radio_button:not(checked) {
     position: absolute;
     opacity: 0;
 }
-.ways-radio_button:not(checked) + label {
+
+.ways-radio_button:not(checked)+label {
     position: relative;
     padding: 0 0 0 35px;
 }
-.ways-radio_button:not(checked) + label:before {
+
+.ways-radio_button:not(checked)+label:before {
     content: '';
     position: absolute;
     top: -3px;
@@ -56,7 +70,8 @@
     border-radius: 50%;
     background: #FFF;
 }
-.ways-radio_button:not(checked) + label:after {
+
+.ways-radio_button:not(checked)+label:after {
     content: '';
     position: absolute;
     top: 1px;
@@ -68,22 +83,27 @@
     opacity: 0;
     transition: all .2s;
 }
-.ways-radio_button:checked + label:after {
+
+.ways-radio_button:checked+label:after {
     opacity: 1;
 }
+
 @media screen and (max-width: 375px) {
     .ways {
         margin: 10px;
     }
+
     .ways-input {
         width: 260px;
         height: 35px;
     }
+
     .ways-button {
         width: 70px;
         height: 37px;
         margin-left: 5px;
     }
+
     .ways-radio_block-item {
         font-size: 13px;
     }
