add resolution width 360px and 320px

--- a/src/components/input-login.css
+++ b/src/components/input-login.css
@@ -19,3 +19,10 @@
         box-shadow: none;
     }
 }
+@media screen and (max-width: 320px) {
+    .login {
+        margin-bottom: 10px;
+        width: 260px;
+        height: 30px;
+    }
+}
