--- a/src/App.css
+++ b/src/App.css
@@ -167,3 +167,23 @@ ul {
     font-size: 14px;
   }
 }
+@media screen and (max-width: 320px) {
+  .slide {
+    height: 150px;
+  }
+  .icon-map {
+    padding-top: 10px;
+    padding-left: 18px;
+    font-size: 60px;
+  }
+  .slide-text {
+    top: -55px;
+    left: 110px;
+  }
+  .slide-title {
+    font-size: 16px;
+  }
+  .slide-subtitle {
+    font-size: 14px;
+  }
+}
