--- a/src/pages/reg/reg.css
+++ b/src/pages/reg/reg.css
@@ -32,56 +32,8 @@
   font-weight: 400;
 }
 
-.name {
-  width: 559px;
-  height: 45px;
-  padding-left: 15px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  font-size: 20px;
-  outline: none;
-  box-shadow: 0px 3px 8px -1px rgba(0, 0, 0, 0.45);
-  margin-bottom: 15px;
-}
-
-.name:focus {
-  border: 1px solid #2C929F;
-}
-
-.surname {
-  width: 559px;
-  height: 45px;
-  padding-left: 15px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  font-size: 20px;
-  outline: none;
-  box-shadow: 0px 3px 8px -1px rgba(0, 0, 0, 0.45);
-  margin-bottom: 15px;
-}
-
-.surname:focus {
-  border: 1px solid #2C929F;
-}
-
 .password {
   margin-bottom: 15px;
-}
-
-.acc-pass {
-  width: 559px;
-  height: 45px;
-  padding-left: 15px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  font-size: 20px;
-  outline: none;
-  box-shadow: 0px 3px 8px -1px rgba(0, 0, 0, 0.45);
-  margin-bottom: 15px;
-}
-
-.acc-pass:focus {
-  border: 1px solid #2C929F;
 }
 
 .button-reg {
@@ -106,23 +58,6 @@
 }
 
 @media screen and (max-width: 375px) {
-  .name {
-    width: 300px;
-    height: 35px;
-    box-shadow: none;
-  }
-
-  .surname {
-    width: 300px;
-    height: 35px;
-    box-shadow: none;
-  }
-
-  .acc-pass {
-    width: 300px;
-    height: 35px;
-    box-shadow: none;
-  }
 
   .button-reg {
     width: 315px;
@@ -141,5 +76,20 @@
 
   .reg-form_subtitle {
     font-size: 16px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .button-reg {
+    width: 277px;
+    height: 30px;
+  }
+  .reg {
+    width: 300px;
+  }
+  .reg-form_title {
+    font-size: 28px;
+  }
+  .reg-form_subtitle {
+    font-size: 14px;
   }
 }
