--- a/src/pages/sign/sign.css
+++ b/src/pages/sign/sign.css
@@ -62,3 +62,22 @@
       left: 65px;
     }
   }
+  @media screen and (max-width: 320px) {
+    .sign {
+      width: 300px;
+    }
+    .sign-form_title {
+      font-size: 28px;
+    }
+    .sign-form_subtitle {
+      font-size: 14px;
+    }
+    .sign-form_add {
+      top: -10px;
+      right: 45px;
+    }
+    .sign-button {
+      top: -5px;
+      left: 47px;
+    }
+  }
