--- a/src/pages/ways/ways.css
+++ b/src/pages/ways/ways.css
@@ -6,22 +6,10 @@
     margin: 15px;
 }
 
-.ways-input {
-    width: 459px;
-    height: 45px;
-    padding-left: 15px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    font-size: 20px;
-    outline: none;
-    box-shadow: 0px 3px 8px -1px rgba(0, 0, 0, 0.45);
-}
-
-.ways-input:focus {
-    border: 1px solid #2C929F;
-}
-
 .ways-button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
     margin-left: 10px;
 }
 
@@ -94,17 +82,47 @@
     }
 
     .ways-input {
-        width: 260px;
-        height: 35px;
+        width: 280px;
+        margin-bottom: 0;
     }
-
     .ways-button {
-        width: 70px;
-        height: 37px;
+        width: 45px;
+        height: 45px;
         margin-left: 5px;
     }
 
     .ways-radio_block-item {
         font-size: 13px;
+    }
+}
+@media screen and (max-width: 360px) {
+    .ways-input {
+        width: 270px;
+    }
+    .ways-radio_block-item {
+        font-size: 12px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .ways-title {
+        font-size: 30px;
+    }
+    .ways {
+        margin: 5px;
+    }
+    .ways-input {
+        padding-left: 5px;
+        width: 255px;
+    }
+    .ways-button {
+        width: 35px;
+        height: 35px;
+    }
+    .ways-radio_button {
+        width: 10px;
+        height: 10px;
+    }
+    .ways-radio_block-item {
+        font-size: 11px;
     }
 }
