--- a/src/components/header-bar/header-bar.css
+++ b/src/components/header-bar/header-bar.css
@@ -2,6 +2,7 @@
   top: 0;
   position: fixed;
   display: flex;
+  text-align: center;
   align-items: center;
   width: 100%;
   height: 50px;
@@ -11,9 +12,11 @@
   background-size: 600% 600%;
   animation: example 30s ease infinite;
 }
+
 .header-title {
   display: none;
 }
+
 .header-bar_logo {
   outline: none;
   padding-bottom: 0;
@@ -25,12 +28,13 @@
 .header-bar_logo:hover {
   transform: scale(1.1, 1.1);
 }
+
 .header-bar_button {
   position: absolute;
   margin-right: 10px;
-  font-weight: 700;
   right: 0;
 }
+
 .header-bar_button:hover {
   color: #000;
 }
@@ -47,6 +51,7 @@ a {
 a:hover {
   color: #000;
 }
+
 /* Burger-menu */
 .menu {
   top: 0;
@@ -126,12 +131,15 @@ a:hover {
     color: #fff;
     z-index: 10;
   }
+
   .header-bar_menu {
     display: none;
   }
+
   .bm-burger-button {
     display: block;
   }
+
   .bm-item-list {
     padding-left: 10px;
     padding-top: 50px;
