--- a/src/components/input-password.css
+++ b/src/components/input-password.css
@@ -19,7 +19,7 @@
         box-shadow: none;
     }
 }
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) {
     .password {
         width: 260px;
         height: 30px;
