--- a/src/pages/ways/ways.css
+++ b/src/pages/ways/ways.css
@@ -103,7 +103,7 @@
         font-size: 12px;
     }
 }
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) {
     .ways-title {
         font-size: 30px;
     }
