--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -23,3 +23,10 @@
         height: 35px;
     }
 }
+@media screen and (min-width: 375px) {
+    .button {
+        font-size: 16px;
+        width: 60px;
+        height: 35px;
+    }
+}
