--- a/src/components/header-bar/header-bar.css
+++ b/src/components/header-bar/header-bar.css
@@ -178,3 +178,60 @@ a:hover {
     font-size: 25px;
   }
 }
+@media screen and (min-width: 375px) {
+  .header-title {
+    top: 0;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    color: #fff;
+    z-index: 10;
+  }
+
+  .header-bar_menu {
+    display: none;
+  }
+
+  .bm-burger-button {
+    display: block;
+  }
+
+  .bm-item-list {
+    padding-left: 10px;
+    padding-top: 50px;
+  }
+
+  .bm-item {
+    font-size: 20px;
+    padding-top: 10px;
+    padding-left: 10px;
+  }
+
+  .bm-burger-button {
+    width: 26px;
+    height: 20px;
+  }
+
+  .header-title_logo {
+    outline: none;
+    padding-bottom: 0;
+    cursor: pointer;
+    margin: 5px 5px 5px 15px;
+    font-size: 16px;
+  }
+
+  a {
+    outline: none;
+    padding-bottom: 10px;
+    margin-left: 5px;
+    font-size: 25px;
+  }
+
+  .header-bar_button {
+    outline: none;
+    font-size: 25px;
+  }
+}
