--- a/src/components/waysItem/waysItem.css
+++ b/src/components/waysItem/waysItem.css
@@ -36,7 +36,55 @@
     height: 40px;
     color: #fff;
     font-size: 16px;
+    border: none;
     border-radius: 10px;
     background: #2C929F;
     margin-right: 10px;
+    transition: .5s;
+}
+.waysItemBtnMap:hover {
+    background: #2039b3;
+    color: #fff;
+}
+@media screen and (max-width: 375px) {
+    .waysItemNumber {
+        font-size: 18px;
+    }
+    .waysItemTitle {
+        font-weight: 400;
+        font-size: 14px;
+    }
+    .waysItemBtnBlock {
+        display: flex;
+        justify-content: space-between;
+        position: initial;
+        margin-left: 15px;
+    }
+    .waysItemBtnMap {
+        font-size: 12px;
+        margin-right: 5px;
+        width: 70px;
+        height: 40px;
+    }
+}
+@media screen and (min-width: 375px) {
+    .waysItemNumber {
+        font-size: 18px;
+    }
+    .waysItemTitle {
+        font-weight: 400;
+        font-size: 14px;
+    }
+    .waysItemBtnBlock {
+        display: flex;
+        justify-content: space-between;
+        position: initial;
+        margin-left: 15px;
+    }
+    .waysItemBtnMap {
+        font-size: 12px;
+        margin-right: 5px;
+        width: 70px;
+        height: 40px;
+    }
 }
