--- a/src/pages/corona/corona.css
+++ b/src/pages/corona/corona.css
@@ -6,7 +6,6 @@
 }
 .coronaCardWrapper {
     display: flex;
-    overflow: scroll;
 }
 .coronaCard {
     padding-top: 10px;
@@ -54,4 +53,14 @@
     padding: 5px 75px 0 20px;
     line-height: 1.7;
     text-align: justify;
+}
+@media screen and (max-width: 375px) {
+    .coronaCardWrapper {
+        overflow: scroll;
+    }
+}
+@media screen and (min-width: 375px) {
+    .coronaCardWrapper {
+        overflow: scroll;
+    }
 }
