--- a/src/pages/reg/reg.css
+++ b/src/pages/reg/reg.css
@@ -78,7 +78,7 @@
     font-size: 16px;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) {
   .button-reg {
     width: 277px;
     height: 30px;
