--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 .slide {
   color: #fff;
   width: 100%;
-  height: 400px;
+  height: 410px;
   display: block;
   position: relative;
   overflow: hidden;
@@ -58,16 +58,16 @@
 .slideshow__nav.slideshow__nav--next { right: 0; }
 
 .icon-map {
-  padding-top: 80px;
-  padding-left: 180px;
+  padding-top: 50px;
+  padding-left: 150px;
   font-size: 200px;
   /* color: #fff; */
 }
 .slide-text {
   /* color: #fff; */
   position: relative;
-  left: 500px;
-  bottom: 160px;
+  left: 470px;
+  bottom: 190px;
 }
 .slide-title {
   font-size: 50px;
@@ -138,7 +138,80 @@ ul {
   opacity: 1;
   transition: opacity 300ms linear;
 }
+.cards {
+  display: flex;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px 10px 0;
+  text-align: center;
+  width: 170px;
+  height: 170px;
+  background: #fff;
+  border-radius: 15px;
+  color: #000;
+  transition: .5s;
+}
+.card:hover {
+  transform: scale(1.05,1.05);
+}
+.icon {
+  font-size: 36px;
+}
+.cardTitle {
+  margin: 0;
+  font-weight: 700;
+  color: #000;
+  font-size: 20px;
+}
+.cardTitle:hover {
+  color: #2039b3;
+}
 /* Media */
+@media screen and (max-width: 414px) {
+  /* slides */
+  .slide {
+    height: 200px;
+  }
+  .icon-map {
+    padding-top: 10px;
+    padding-left: 18px;
+    font-size: 60px;
+  }
+  .slide-text {
+    top: -60px;
+    left: 115px;
+  }
+  .slide-title {
+    font-weight: 400;
+    font-size: 20px;
+  }
+  .slide-subtitle {
+    margin: 5px 0 5px 0;
+    width: 220px;
+    font-size: 16px;
+    word-wrap: break-word;
+  }
+  .cards {
+    overflow: scroll;
+  }
+  .card {
+    width: 85px;
+    height: 85px;
+  }
+  .icon {
+    font-size: 14px;
+  }
+  .cardTitle {
+    font-size: 12px;
+  }
+  .slide-route {
+    font-size: 14px;
+  }
+}
 @media screen and (max-width: 375px) {
   /* slides */
   .slide {
@@ -167,7 +240,7 @@ ul {
     font-size: 14px;
   }
 }
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
   .slide {
     height: 150px;
   }
