--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -3,7 +3,7 @@
     height: 45px;
     border: none;
     border-radius: 10px;
-    background-color: #2C929F;
+    background-color: #E66A08;
     color: #fff;
     font-size: 20px;
     font-weight: 400;
@@ -12,9 +12,8 @@
     font-family: Montserrat;
 }
 .button:hover {
-    background-color: inherit;
-    color: #2C929F;
-    border: 1px solid #2C929F;
+    background-color: #000;
+    color: #fff;
 }
 @media screen and (max-width: 375px) {
     .button {
@@ -23,7 +22,7 @@
         height: 35px;
     }
 }
-@media screen and (min-width: 375px) {
+@media screen and (max-width: 414px) {
     .button {
         font-size: 16px;
         width: 60px;
