--- a/src/components/input-login.css
+++ b/src/components/input-login.css
@@ -12,6 +12,14 @@
     border: 1px solid #2C929F;
 }
 ::-webkit-input-placeholder { color:#c4c4c4; font-family: Montserrat;}
+@media screen and (max-width: 414px) {
+    .login {
+        margin-bottom: 10px;
+        width: 300px;
+        height: 35px;
+        box-shadow: none;
+    }
+}
 @media screen and (max-width: 375px) {
     .login {
         width: 300px;
@@ -19,7 +27,7 @@
         box-shadow: none;
     }
 }
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
     .login {
         margin-bottom: 10px;
         width: 260px;
