--- a/src/components/input-password.css
+++ b/src/components/input-password.css
@@ -12,6 +12,13 @@
     border: 1px solid #2C929F;
 }
 ::-webkit-input-placeholder { color:#c4c4c4; font-family: Montserrat; font-size: 18px;}
+@media screen and (max-width: 414px) {
+    .password {
+        width: 300px;
+        height: 35px;
+        box-shadow: none;
+    }
+}
 @media screen and (max-width: 375px) {
     .password {
         width: 300px;
@@ -19,7 +26,7 @@
         box-shadow: none;
     }
 }
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
     .password {
         width: 260px;
         height: 30px;
