--- a/src/components/news-shortcat/news.css
+++ b/src/components/news-shortcat/news.css
@@ -22,7 +22,7 @@
         height: 113px;
     }
 }
-@media screen and (min-width: 375px) {
+@media screen and (max-width: 414px) {
     .news-wrapper {
         margin-left: 5px;
     }
