--- a/src/pages/sign/sign.css
+++ b/src/pages/sign/sign.css
@@ -43,6 +43,25 @@
     position: relative;
     left: 125px;
   }
+  @media screen and (max-width: 414px) {
+    .sign {
+      width: 350px;
+      height: 100vh;
+    }
+    .sign-form_title {
+      font-size: 30px;
+    }
+    .sign-form_subtitle {
+      font-size: 16px;
+    }
+    .sign-form_add {
+      font-size: 14px;
+      right: 65px;
+    }
+    .sign-button {
+      left: 65px;
+    }
+  }
   @media screen and (max-width: 375px) {
     .sign {
       width: 350px;
@@ -62,7 +81,7 @@
       left: 65px;
     }
   }
-  @media screen and (min-width: 320px) {
+  @media screen and (max-width: 320px) {
     .sign {
       width: 300px;
     }
