--- a/src/pages/ways/ways.css
+++ b/src/pages/ways/ways.css
@@ -76,6 +76,25 @@
     opacity: 1;
 }
 
+@media screen and (max-width: 414px) {
+    .ways {
+        margin: 10px;
+    }
+
+    .ways-input {
+        width: 280px;
+        margin-bottom: 0;
+    }
+    .ways-button {
+        width: 45px;
+        height: 45px;
+        margin-left: 5px;
+    }
+
+    .ways-radio_block-item {
+        font-size: 13px;
+    }
+}
 @media screen and (max-width: 375px) {
     .ways {
         margin: 10px;
@@ -103,7 +122,7 @@
         font-size: 12px;
     }
 }
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
     .ways-title {
         font-size: 30px;
     }
