--- a/src/pages/sign/sign.css
+++ b/src/pages/sign/sign.css
@@ -9,12 +9,12 @@
   justify-content: center;
   align-items: center;
   margin-top: 70px;
-  max-width: 1535px;
-  width: 935px;
-  max-height: 1040px;
-  height: 740px;
+  /* min-width: 1080px; */
+  width: 80%;
+  /* max-height: 1040px; */
+  height: 90vh;
   border: 1px solid #C4C4C4;
-  border-radius: 30px;
+  border-radius: 15px;
   }
   .sign-form {
   width: 735px;
@@ -45,8 +45,7 @@
   }
   @media screen and (max-width: 1080px) {
     .sign {
-      width: 350px;
-      height: 100vh;
+      height: 90vh;
     }
     .sign-form_title {
       font-size: 30px;
@@ -63,10 +62,10 @@
     }
   }
   @media screen and (max-width: 375px) {
-    .sign {
+    /* .sign {
       width: 350px;
       height: 100vh;
-    }
+    } */
     .sign-form_title {
       font-size: 30px;
     }
@@ -82,9 +81,9 @@
     }
   }
   @media screen and (max-width: 320px) {
-    .sign {
+    /* .sign {
       width: 300px;
-    }
+    } */
     .sign-form_title {
       font-size: 28px;
     }
